--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -24,6 +24,7 @@ email: francesco.pinotti@zoo.ox.ax.uk
 phone: ''
 address:
   city: Oxford
+  region: UK
   country: United Kingdom
   country_code: UK
 appointment_url: ''
