--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -7,9 +7,9 @@ main:
   - name: Home
     url: '#about'
     weight: 10
-  - name: Publications  # Title of the link.
-    url: "/publications"  # Widget Page folder name.
-    weight: 20  # Position of the link in the navigation bar.
+  #- name: Publications  # Title of the link.
+  #  url: "/publications"  # Widget Page folder name.
+  #  weight: 20  # Position of the link in the navigation bar.
   #- name: Posts
   #  url: '#posts'
   #  weight: 20
