--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -7,9 +7,9 @@ main:
   - name: Home
     url: '#about'
     weight: 10
-  #- name: Publications  # Title of the link.
-  #  url: "/publications"  # Widget Page folder name.
-  #  weight: 20  # Position of the link in the navigation bar.
+  - name: Publications  # Title of the link.
+    url: "/content/publications"  # Widget Page folder name.
+    weight: 20  # Position of the link in the navigation bar.
   #- name: Posts
   #  url: '#posts'
   #  weight: 20
@@ -22,9 +22,9 @@ main:
   #- name: Publications
   #  url: '#featured'
   #  weight: 50
-  - name: Contact
-    url: '#contact'
-    weight: 60
+  #- name: Contact
+  #  url: '#contact'
+  #  weight: 60
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/uploads/resume.pdf` and uncomment the lines below.
