--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -7,9 +7,9 @@ main:
   - name: Home
     url: '#about'
     weight: 10
-  - name: Publications  # Title of the link.
-    url: "/publications"  # Widget Page folder name.
-    weight: 20  # Position of the link in the navigation bar.
+  #- name: Publications  # Title of the link.
+  #  url: "/publications"  # Widget Page folder name.
+  #  weight: 20  # Position of the link in the navigation bar.
   #- name: Posts
   #  url: '#posts'
   #  weight: 20
@@ -19,9 +19,9 @@ main:
   #- name: Talks
   #  url: '#talks'
   #  weight: 40
-  #- name: Publications
-  #  url: '#featured'
-  #  weight: 50
+  - name: Publications
+    url: '#featured'
+    weight: 50
   #- name: Contact
   #  url: '#contact'
   #  weight: 60
